--- a/app/src/main/res/layout/fragment_today.xml
+++ b/app/src/main/res/layout/fragment_today.xml
@@ -19,6 +19,18 @@
         android:textSize="35sp"
         android:layout_height="70dp"/>
 
+        <TextView
+            android:layout_width="100dp"
+            android:layout_alignParentEnd="true"
+            android:text="LiveTv"
+            android:id="@+id/livetv"
+            android:textColor="@android:color/holo_red_dark"
+            android:layout_marginEnd="30dp"
+            android:textSize="25sp"
+            android:layout_marginTop="20dp"
+            android:layout_height="wrap_content"/>
+
+
     <ImageView
         android:layout_width="match_parent"
        android:src="@drawable/monday"
