--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,6 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:id="@+id/LinearLayout1"
+        android:layout_margin="10dp"
+        android:weightSum="2"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+
+            android:text="Settings"
+            android:textColor="@android:color/black"
+            android:textSize="35sp"
+            android:textStyle="bold" />
+        <TextView
+            android:layout_width="match_parent"
+            android:id="@+id/btnLogin"
+            android:layout_weight="1"
+            android:textSize="22sp"
+            android:textColor="@color/purple_200"
+            android:layout_marginEnd="15dp"
+            android:gravity="end"
+            android:text="Log in"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+   <RelativeLayout
+       android:layout_width="match_parent"
+       android:layout_margin="10dp"
+       android:layout_height="wrap_content">
+       <TextView
+           android:layout_width="wrap_content"
+           android:text="Dark mode"
+           android:textSize="25sp"
+           android:layout_height="wrap_content"/>
+
+       <Switch
+           android:layout_width="wrap_content"
+           android:layout_marginTop="10dp"
+           android:layout_alignParentEnd="true"
+           android:layout_height="wrap_content"/>
+   </RelativeLayout>
+
+
+
+</LinearLayout>
