--- a/app/src/main/res/layout/youtube_player_support.xml
+++ b/app/src/main/res/layout/youtube_player_support.xml
@@ -8,10 +8,19 @@
     <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
         android:id="@+id/youtube_player_view"
         android:layout_width="match_parent"
-        android:layout_height="320dp"
+        android:layout_height="300dp"
         app:videoId="XWq5kBlakcQ"
         app:autoPlay="true"
         app:showFullScreenButton="true" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:text="More Videos"
+        android:textSize="22sp"
+        android:layout_marginTop="5sp"
+        android:textColor="@color/black"
+        android:gravity="center"
+        android:layout_height="wrap_content"/>
 
 
 
@@ -19,7 +28,7 @@
         android:layout_width="match_parent"
         android:id="@+id/rvLiveNews"
         android:scrollbars="horizontal"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="5dp"
         android:layout_height="match_parent"/>
 
 
