--- a/app/src/main/res/navigation/news_nav_graph.xml
+++ b/app/src/main/res/navigation/news_nav_graph.xml
@@ -63,8 +63,7 @@
             app:destination="@id/recommendedNewsFragment" />
         <argument
             android:name="videodata"
-            app:argType="string"
-            android:defaultValue="default" />
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/recommendedNewsFragment"
