--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,60 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".firebase.SignUpActivity">
 
-   <EditText
-       android:layout_width="match_parent"
-       android:id="@+id/etEmail"
-       app:layout_constraintTop_toTopOf="parent"
-       android:layout_margin="20dp"
-       android:hint="Enter your email"
-       app:layout_constraintStart_toStartOf="parent"
-       app:layout_constraintEnd_toEndOf="parent"
-       android:layout_height="wrap_content"/>
-
-    <EditText
+    <ImageView
         android:layout_width="match_parent"
-        android:id="@+id/etPassword"
-        app:layout_constraintTop_toBottomOf="@+id/etEmail"
-        android:layout_margin="20dp"
-        android:hint="Enter your password"
+        android:id="@+id/loginImg"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_height="wrap_content"/>
-    <EditText
+        android:src="@drawable/signuparrow"
+        android:layout_height="80dp"/>
+    <ImageView
         android:layout_width="match_parent"
-        android:id="@+id/etConfirmPassword"
-        app:layout_constraintTop_toBottomOf="@+id/etPassword"
-        android:layout_margin="20dp"
-        android:hint="Confirm password"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_height="wrap_content"/>
+        android:src="@drawable/signup_img"
+        android:layout_height="150dp"/>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/loginCardView"
+        android:layout_width="match_parent"
+        app:cardCornerRadius="7dp"
 
-    <Button
-        android:id="@+id/btnSignUp"
-        android:layout_width="wrap_content"
-        android:layout_margin="20dp"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />
+        android:layout_margin="10dp"
+        android:elevation="20dp"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:background="#F5F4EF"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_width="250dp"
+                android:layout_marginStart="12dp"
+                android:src="@drawable/email_img"
+                android:layout_height="50dp"/>
+            <EditText
+                android:layout_width="match_parent"
+                android:id="@+id/etEmail"
+                android:padding="12dp"
+                android:background="@drawable/login_rect_bg"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:hint="Email"
+                android:layout_height="wrap_content"/>
+            <ImageView
+                android:layout_width="200dp"
+                android:layout_marginStart="12dp"
+                android:src="@drawable/password_img"
+                android:layout_height="50dp"/>
+
+            <EditText
+                android:layout_width="match_parent"
+                android:id="@+id/etPassword"
+                android:padding="12dp"
+                android:inputType="textPassword"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:background="@drawable/login_rect_bg"
+                android:hint="Password"
+                android:layout_height="wrap_content"/>
+            <EditText
+                android:layout_width="match_parent"
+                android:id="@+id/etConfirmPassword"
+                android:padding="12dp"
+                android:inputType="textPassword"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:background="@drawable/login_rect_bg"
+                android:hint="Confirm password"
+                android:layout_height="wrap_content"/>
+                <Button
+                    android:id="@+id/btnSignUp"
+                    android:layout_width="wrap_content"
+                    android:layout_margin="20dp"
+                    android:layout_gravity="center"
+                    android:textAllCaps="false"
+                    android:layout_height="wrap_content"
+                    android:text="Sign up"
+                    />
+
+        </LinearLayout>
+
+
+    </androidx.cardview.widget.CardView>
+
 
     <TextView
         android:id="@+id/tvLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="32sp"
-        android:layout_margin="20dp"
-        android:text="Login"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />
+        android:layout_gravity="center"
+        android:layout_margin="16dp"
+        android:text="Log in?"
+        android:textColor="#000000"
+        android:textSize="18sp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
