data saved in database completed

--- a/app/src/main/res/layout/fragment_weekly.xml
+++ b/app/src/main/res/layout/fragment_weekly.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -13,8 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
-
 
         <TextView
             android:id="@+id/tvWeekly"
@@ -64,11 +60,11 @@
     </androidx.core.widget.NestedScrollView>
 
     <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="35dp"
-        android:layout_marginBottom="35dp"
+        android:id="@+id/BtnAlign"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+       android:layout_margin="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+         app:layout_constraintEnd_toEndOf="parent"
         android:src="@drawable/ic_align_text" />
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
