--- a/app/src/main/res/layout/saved_item_layout.xml
+++ b/app/src/main/res/layout/saved_item_layout.xml
@@ -20,7 +20,7 @@
             android:padding="12dp">
 
             <TextView
-                android:id="@+id/tv_sub_item_title"
+                android:id="@+id/tv_saved_sub_item_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Sub item title"
@@ -29,7 +29,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/tvDescription"
+                android:id="@+id/tv_saved_Description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
@@ -37,7 +37,7 @@
                 android:textColor="@color/black" />
 
             <TextView
-                android:id="@+id/tvTime"
+                android:id="@+id/tv_saved_Time"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
@@ -53,7 +53,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/img_sub_item"
+                android:id="@+id/img_saved_sub_item"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:layout_margin="10dp"
@@ -61,7 +61,7 @@
                 android:src="@drawable/ic_launcher_foreground" />
 
             <ImageView
-                android:id="@+id/btn_img_save"
+                android:id="@+id/img_saved_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
