--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -19,14 +19,14 @@
             android:text="Search"
             android:textStyle="bold"
             android:padding="15dp"
-            android:textSize="35sp"
+            android:textSize="33sp"
             android:textColor="@android:color/black"
             android:layout_height="80dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:text="Sort by"
-            android:textSize="22sp"
+            android:textSize="20sp"
             android:layout_marginStart="20dp"
             android:textColor="@android:color/holo_purple"
             android:layout_height="wrap_content"/>
@@ -37,8 +37,10 @@
         android:id="@+id/etSearch"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:paddingStart="40dp"
-        android:hint="Articles, keywords, and topics"
+        android:drawableStart="@drawable/ic_baseline_search_24"
+        android:paddingStart="15dp"
+        android:textSize="17sp"
+        android:hint=" Articles, keywords and topics"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/rectangle_bg"
@@ -48,17 +50,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/layout_img"
-        android:id="@+id/ivRandom"
-        android:layout_marginTop="190dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etSearch"
-        tools:layout_editor_absoluteX="0dp"/>
+<!--    <ImageView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:src="@drawable/layout_img"-->
+<!--        android:id="@+id/ivRandom"-->
+<!--        android:layout_marginTop="190dp"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/etSearch"-->
+<!--        tools:layout_editor_absoluteX="0dp"/>-->
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvSearchNews"
