--- a/app/src/main/res/layout/item_article_preview.xml
+++ b/app/src/main/res/layout/item_article_preview.xml
@@ -15,6 +15,7 @@
             android:id="@+id/ivArticleImage"
             android:layout_width="match_parent"
             android:layout_height="200dp"
+            android:layout_margin="10dp"
             android:layout_marginTop="10dp"
             android:scaleType="centerCrop" />
 
@@ -22,24 +23,26 @@
             android:id="@+id/tvTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="10dp"
             android:ellipsize="end"
             android:maxLines="3"
             android:text="TITLE"
             android:textColor="@android:color/holo_red_dark"
             android:textSize="15sp"
             android:textStyle="bold" />
+
         <TextView
             android:id="@+id/tvDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="25sp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
             android:ellipsize="end"
             android:maxLines="5"
             android:text="DESCRIPTION"
-            android:textColor="@android:color/black"/>
+            android:textColor="#1E1D1D"
+            android:textSize="22sp"
+            android:textStyle="bold" />
 
 
 
@@ -47,18 +50,27 @@
         android:id="@+id/tvPublishedAt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="10dp"
         android:text="PUBLISHED AT"
-        android:textColor="@android:color/black"/>
+        android:textColor="#1E1D1D"/>
 
 
         <TextView
             android:id="@+id/tvSource"
             android:layout_width="match_parent"
+            android:layout_marginStart="10dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="12dp"
             android:text="SOURCE"
-            android:textColor="@android:color/black"/>
+            android:textColor="#1E1D1D"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#D5D0D0"
+            android:layout_marginTop="10dp"/>
+
 
     </LinearLayout>
 
