--- a/app/src/main/res/layout/fragment_today.xml
+++ b/app/src/main/res/layout/fragment_today.xml
@@ -68,15 +68,15 @@
 
     <ProgressBar
         android:id="@+id/paginationProgressBar"
+
         style="?attr/progressBarStyle"
         android:layout_width="wrap_content"
+        android:layout_marginTop="400dp"
+        android:layout_centerHorizontal="true"
         android:layout_height="wrap_content"
         android:visibility="invisible"
         android:background="@android:color/transparent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
+       />
 
     </RelativeLayout>
 
